@@ -1,22 +1,22 @@
 /*******************************************************************************
  * This file is part of OpenNMS(R).
  *
- * Copyright (C) 2009-2012 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2012 The OpenNMS Group, Inc.
+ * Copyright (C) 2009-2014 The OpenNMS Group, Inc.
+ * OpenNMS(R) is Copyright (C) 1999-2014 The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
+ * it under the terms of the GNU Affero General Public License as published
  * by the Free Software Foundation, either version 3 of the License,
  * or (at your option) any later version.
  *
  * OpenNMS(R) is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Affero General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
+ * You should have received a copy of the GNU Affero General Public License
  * along with OpenNMS(R).  If not, see:
  *      http://www.gnu.org/licenses/
  *
@@ -33,42 +33,20 @@ import java.net.InetAddress;
 import java.net.URISyntaxException;
 import java.util.Map;
 
-import org.apache.http.HttpHost;
-import org.apache.http.HttpRequest;
-import org.apache.http.HttpRequestInterceptor;
-import org.apache.http.HttpResponse;
+import org.apache.commons.io.IOUtils;
 import org.apache.http.HttpVersion;
-import org.apache.http.auth.AuthScope;
-import org.apache.http.auth.AuthState;
-import org.apache.http.auth.Credentials;
-import org.apache.http.auth.UsernamePasswordCredentials;
-import org.apache.http.client.CredentialsProvider;
+import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.client.methods.HttpGet;
-import org.apache.http.client.params.ClientPNames;
-import org.apache.http.client.protocol.ClientContext;
 import org.apache.http.client.utils.URIBuilder;
-import org.apache.http.impl.auth.BasicScheme;
-import org.apache.http.impl.client.DefaultHttpClient;
-import org.apache.http.params.CoreConnectionPNames;
-import org.apache.http.params.CoreProtocolPNames;
-import org.apache.http.protocol.ExecutionContext;
-import org.apache.http.protocol.HttpContext;
 import org.apache.http.util.EntityUtils;
 import org.opennms.core.utils.InetAddressUtils;
 import org.opennms.core.utils.ParameterMap;
+import org.opennms.core.web.HttpClientWrapper;
 import org.opennms.netmgt.capsd.AbstractPlugin;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-/**
- * <p>WebPlugin class.</p>
- *
- * @author ranger
- * @version $Id: $
- */
 public class WebPlugin extends AbstractPlugin {
-    
-    
     private static final Logger LOG = LoggerFactory.getLogger(WebPlugin.class);
 
     static Integer DEFAULT_TIMEOUT = 3000;
@@ -83,42 +61,41 @@ public class WebPlugin extends AbstractPlugin {
     /** {@inheritDoc} */
     @Override
     public String getProtocolName() {
-        // TODO Auto-generated method stub
         return null;
     }
 
     /** {@inheritDoc} */
     @Override
     public boolean isProtocolSupported(InetAddress address) {
-        // TODO Auto-generated method stub
         return false;
     }
 
     /** {@inheritDoc} */
     @Override
-    public boolean isProtocolSupported(InetAddress address, Map<String, Object> map) {
-
+    public boolean isProtocolSupported(final InetAddress address, final Map<String, Object> map) {
         boolean retval=false;
-        DefaultHttpClient httpClient = new DefaultHttpClient();
+        
+        final HttpClientWrapper clientWrapper = HttpClientWrapper.create();
 
         try {
-            URIBuilder ub = new URIBuilder();
+            final URIBuilder ub = new URIBuilder();
             ub.setScheme(ParameterMap.getKeyedString(map, "scheme", DEFAULT_SCHEME));
             ub.setHost(InetAddressUtils.str(address));
             ub.setPort(ParameterMap.getKeyedInteger(map, "port", DEFAULT_PORT));
             ub.setPath( ParameterMap.getKeyedString(map, "path", DEFAULT_PATH));
-            HttpGet getMethod = new HttpGet(ub.build());
-            httpClient.getParams().setParameter(CoreConnectionPNames.CONNECTION_TIMEOUT, ParameterMap.getKeyedInteger(map,"timeout", DEFAULT_TIMEOUT));
-            httpClient.getParams().setParameter(CoreConnectionPNames.SO_TIMEOUT, ParameterMap.getKeyedInteger(map,"timeout", DEFAULT_TIMEOUT));
-            httpClient.getParams().setParameter(CoreProtocolPNames.USER_AGENT, ParameterMap.getKeyedString(map,"user-agent",DEFAULT_USER_AGENT));
-            getMethod.getParams().setParameter(ClientPNames.VIRTUAL_HOST, new HttpHost(ParameterMap.getKeyedString(map,"virtual-host", InetAddressUtils.str(address)), ParameterMap.getKeyedInteger(map, "port", DEFAULT_PORT)));
+            final HttpGet getMethod = new HttpGet(ub.build());
+
+            clientWrapper.setConnectionTimeout(ParameterMap.getKeyedInteger(map,"timeout", DEFAULT_TIMEOUT))
+                    .setSocketTimeout(ParameterMap.getKeyedInteger(map,"timeout", DEFAULT_TIMEOUT))
+                    .setUserAgent(ParameterMap.getKeyedString(map,"user-agent",DEFAULT_USER_AGENT))
+                    .setVirtualHost(ParameterMap.getKeyedString(map,"virtual-host", InetAddressUtils.str(address)));
 
             if(ParameterMap.getKeyedBoolean(map, "http-1.0", false)) {
-                httpClient.getParams().setParameter(CoreProtocolPNames.PROTOCOL_VERSION, HttpVersion.HTTP_1_0);
+                getMethod.setProtocolVersion(HttpVersion.HTTP_1_0);
             }
 
-            for(Object okey : map.keySet()) {
-                String key = okey.toString();
+            for(final Object okey : map.keySet()) {
+                final String key = okey.toString();
                 if(key.matches("header_[0-9]+$")){
                     String headerName  = ParameterMap.getKeyedString(map,key,null);
                     String headerValue = ParameterMap.getKeyedString(map,key + "_value",null);
@@ -127,42 +104,16 @@ public class WebPlugin extends AbstractPlugin {
             }
 
             if(ParameterMap.getKeyedBoolean(map,"auth-enabled",false)){
-                httpClient.getCredentialsProvider().setCredentials(AuthScope.ANY, new UsernamePasswordCredentials( ParameterMap.getKeyedString(map, "auth-user", DEFAULT_USER), ParameterMap.getKeyedString(map, "auth-password", DEFAULT_PASSWORD)));
+                clientWrapper.addBasicCredentials(ParameterMap.getKeyedString(map, "auth-user", DEFAULT_USER), ParameterMap.getKeyedString(map, "auth-password", DEFAULT_PASSWORD));
                 if (ParameterMap.getKeyedBoolean(map, "auth-preemptive", true)) {
-                    /**
-                     * Add an HttpRequestInterceptor that will perform preemptive auth
-                     * @see http://hc.apache.org/httpcomponents-client-4.0.1/tutorial/html/authentication.html
-                     */
-                    HttpRequestInterceptor preemptiveAuth = new HttpRequestInterceptor() {
-
-                        @Override
-                        public void process(final HttpRequest request, final HttpContext context) throws IOException {
-
-                            AuthState authState = (AuthState)context.getAttribute(ClientContext.TARGET_AUTH_STATE);
-                            CredentialsProvider credsProvider = (CredentialsProvider)context.getAttribute(ClientContext.CREDS_PROVIDER);
-                            HttpHost targetHost = (HttpHost)context.getAttribute(ExecutionContext.HTTP_TARGET_HOST);
-
-                            // If not auth scheme has been initialized yet
-                            if (authState.getAuthScheme() == null) {
-                                AuthScope authScope = new AuthScope(targetHost.getHostName(), targetHost.getPort());
-                                // Obtain credentials matching the target host
-                                Credentials creds = credsProvider.getCredentials(authScope);
-                                // If found, generate BasicScheme preemptively
-                                if (creds != null) {
-                                    authState.update(new BasicScheme(), creds);
-                                }
-                            }
-                        }
-
-                    };
-                    httpClient.addRequestInterceptor(preemptiveAuth, 0);
+                    clientWrapper.usePreemptiveAuth();
                 }
             }
 
-            HttpResponse response = httpClient.execute(getMethod);
-            Integer statusCode = response.getStatusLine().getStatusCode();
+            final CloseableHttpResponse response = clientWrapper.execute(getMethod);
+            final Integer statusCode = response.getStatusLine().getStatusCode();
 
-            String expectedText = ParameterMap.getKeyedString(map,"response-text",null);
+            final String expectedText = ParameterMap.getKeyedString(map,"response-text",null);
 
             if(!inRange(ParameterMap.getKeyedString(map, "response-range", DEFAULT_HTTP_STATUS_RANGE),statusCode)){
                 retval=false;
@@ -171,7 +122,7 @@ public class WebPlugin extends AbstractPlugin {
                 retval=true;
             }
 
-            if (expectedText!=null){
+            if (expectedText!=null) {
                 String responseText = EntityUtils.toString(response.getEntity());
                 if(expectedText.charAt(0)=='~'){
                     if(!responseText.matches(expectedText.substring(1)))
@@ -191,27 +142,26 @@ public class WebPlugin extends AbstractPlugin {
 
             }
 
-        } catch (IOException e) {
+        } catch (final IOException e) {
             LOG.info(e.getMessage(), e);
             retval = false;
-        } catch (URISyntaxException e) {
+        } catch (final URISyntaxException e) {
             LOG.info(e.getMessage(), e);
             retval = false;
-        } finally{
-            if (httpClient != null) {
-                httpClient.getConnectionManager().shutdown();
-            }
+        } finally {
+            IOUtils.closeQuietly(clientWrapper);
         }
 
         return retval;
     }
 
-    private boolean inRange(String range,Integer val){
-        String[] boundries = range.split("-");
-        if(val < new Integer(boundries[0]) || val > new Integer(boundries[1]))
+    private boolean inRange(final String range, final Integer val) {
+        final String[] boundries = range.split("-");
+        if(val < Integer.valueOf(boundries[0]) || val > Integer.valueOf(boundries[1])) {
             return false;
-        else
+        } else {
             return true;
+        }
     }
 
 }
